# Eyes

./: .gitignore  CONVERGENCE_AND_AUDIT.md  FINGERPRINT.md  GHIDRA.md  STATE_OF_THE_SOLVE.md  eye-cipher-workbench.html  eyes.py  full-installer.py  install-ghidra.bat  install-ghidra.ps1  install-ghidra.sh  keyscan_report.html  report.html  run.py  workbench.html  workbench.py
archive/: PARANOIA_AUDIT.md
dashboard/: __init__.py  build.py  cipher_validate.py  cut_recipe.py  dataset_store.py  deck_infer.py  eye_puzzle.py  import_parse.py  orchestrator.py  registry.py  selftest.py  server.py  tier1_api.py  tier2_api.py  workflow_map.py  workflow_report.py  workflows.py
data/: Noita Eye Data.xlsx  WarFairy_Eye_Data_Conversion_Sets.xls
eyecrack/: README.md  alphabet_brute.py  base_search.py  cipher_fingerprint.py  compose_order.py  crib_fit.py  cribdrag.py  cut_recipe.py  deck_sweep.py  exhaust_bench.py  eyecrack.py  globality.py  keyscan.py  ngram_solve.py  order_bench.py  order_solve.py  ordering_exhaust.py  passage_template.py  pos0_base.py  refrain_attack.py  refrain_compose.py  refrain_pipeline.py  refrain_sweep.py  rosetta.py  salakieli_crib.py  template_phrase.py  triplet_base_search.py
eyesieve/: CHANGELOG.md  MANIFEST.sha256  README.md  eyesieve_ciphers.py  eyesieve_cli.py  eyesieve_corpus.py  eyesieve_enumerator.py  eyesieve_html_report.py  eyesieve_hypothesis.py  eyesieve_keyderiv.py  eyesieve_mprunner.py  eyesieve_permutations.py  eyesieve_preflight.py  eyesieve_reader.py  eyesieve_run_report.py  eyesieve_runner.py  eyesieve_scoring.py  eyesieve_selftest.py  eyesieve_sieve.py  eyesieve_sources.py  noita_eye_data.json  pyproject.toml
eyestat/: AUDIT.md  CHANGELOG.md  README.md  SETUP.md  WORKFLOW.md  calibrate_report.py  extra_words_fi.txt  extra_words_krl.txt  eyestat_compute_audit.py  eyestat_gpu.py  eyestat_gpu_probe.py  eyestat_gpu_runner.py  eyestat_gpu_validate.py  eyestat_html_report.py  eyestat_kernels.py  eyestat_migrate.py  eyestat_migrate_scans.py  eyestat_preflight.py  eyestat_prngs.py  eyestat_queue.py  eyestat_recover.py  eyestat_runner.py  eyestat_scoring.py  eyestat_selftest.py  eyestat_status.py  globality_gpu.py  install.sh  max_hits_benchmark.py  noita_eye_triplet_0.json  noita_eye_triplet_1.json  noita_eye_triplet_2.json  noita_wordlist.txt  requirements-gpu.txt  requirements.txt  run.sh  salakieli_sweep.sh  shadow_audit.py  split_triplets.py  txt_to_json.py
eyewitness/: README.md  binary_provenance.py  chaining_audit.py  cipher_lattice.py  datastream_check.py  depth_map.py  eyescoreboard.py  eyewitness.py  fingerprint.json  glyph_repetition_sheet.csv  header_base.py  header_test.py  iso_extract.py  iso_extract_audit.py  isomorph_chain.py  keyspace_ledger.py  keystream_scope_test.py  model_audit.py  number_test.py  passage_template.py  passage_template_integration.py  pure_progressive.py  refrain_template.py  repeat_census.py  salakieli_aes.py  shared_structure.py  trifid_scan.py  triplet_keytest.py  verify_fingerprint.py  viewer_anchor.py
noita_eye_core/: README.md  __init__.py  alphabet_brute.py  alphabet_cut.py  alphabet_env.py  analyze.py  base_search.py  calibrate.py  chain_extract.py  chain_models.py  cipher_fingerprint.py  cipher_ops.py  (+54 more)
(+20 files in other folders)
